# gherrit

./: AGENTS.md  Cargo.toml  INSTRUCTIONS.md  README.md  action.yml  basket  build.rs  gerrit-hook  pre-push  rustfmt.toml
.github/workflows/: ci.yml  gherrit-live-test.yml  gherrit-rebase-stack.yml
agent_docs/: development.md  style.md  validation.md
hooks/: commit-msg  post-checkout  pre-push
src/: commit_msg.rs  install.rs  main.rs  manage.rs  pre_push.rs  util.rs
tests/: branch_config_transitions.rs  integration_tests.rs  migration_edge_cases.rs  pre_push_autosquash.rs  prevent_push_to_closed_pr.rs  regression_batch_update_failure.rs  reproduce_double_quote_bug.rs  reproduce_issue.rs  reproduce_merge_queue_failure.rs  reproduce_pagination_bug.rs  reproduce_pr_base_bug.rs  reproduce_status_bugs.rs  reproduce_unchecked_output_bugs.rs  reproduce_unmanaged_sync.rs  verify_repo_args.rs
tests/common/: mod.rs
tests/snapshots/: branch_config_transitions__transition_case_T02.snap  branch_config_transitions__transition_case_T03.snap  branch_config_transitions__transition_case_T04.snap  branch_config_transitions__transition_case_T05.snap  branch_config_transitions__transition_case_T06.snap  branch_config_transitions__transition_case_T07.snap  branch_config_transitions__transition_case_T08.snap  branch_config_transitions__transition_case_T10.snap  branch_config_transitions__transition_case_T12.snap  branch_config_transitions__transition_case_T14.snap  branch_config_transitions__transition_case_T15.snap  branch_config_transitions__transition_case_T16.snap  branch_config_transitions__transition_case_T21.snap  branch_config_transitions__transition_case_T23.snap  branch_config_transitions__transition_case_T24.snap  branch_config_transitions__transition_case_T25.snap  integration_tests__branch_management_unmanage.snap  (+46 more)
testutil/: Cargo.toml
testutil/data/: github_schema.graphql
testutil/src/: lib.rs  mock_bin.rs  mock_server.rs
testutil/src/snapshots/: testutil__branch_management_drift_warning.snap  testutil__branch_management_force_manage.snap  testutil__branch_management_unmanage.snap  testutil__commit_msg_edge_manage.snap  testutil__commit_msg_squash.snap  testutil__full_stack_lifecycle_push.snap  testutil__install_edge_cases_conflict.snap  testutil__install_security_custom_external_allow.snap  testutil__install_security_custom_external_block.snap  testutil__install_security_default.snap  testutil__large_stack_batching.snap  testutil__manage_detached_head.snap  testutil__manage_drift_attempt_switch.snap  testutil__manage_drift_force_switch.snap  testutil__manage_drift_init.snap  testutil__manage_invalid_config.snap  testutil__manage_mutually_exclusive.snap  testutil__manage_toggle_switch_private.snap  testutil__manage_toggle_switch_public.snap  testutil__optimistic_locking_v1.snap  testutil__optimistic_locking_v2_fail.snap  testutil__post_checkout_drift_shared.snap  testutil__post_checkout_drift_stack.snap  testutil__pr_body_generation_v1.snap  testutil__pr_body_generation_v2.snap  testutil__pre_push_ancestry_failure.snap  testutil__pre_push_failure_broken_remote.snap  testutil__public_stack_links_private.snap  testutil__public_stack_links_public.snap  testutil__rebase_detection_manage.snap  testutil__reproduce_unmanaged_sync_explicit.snap  testutil__reproduce_unmanaged_sync_implicit.snap  testutil__transition_case_T02.snap  testutil__transition_case_T04.snap  testutil__transition_case_T05.snap  testutil__transition_case_T06.snap  testutil__transition_case_T07.snap  testutil__transition_case_T12.snap  testutil__transition_case_T13.snap  testutil__transition_case_T14.snap  (+10 more)
(+1 files in other folders)
