[package]
name = "gherrit"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
gix = "0.58.0"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
log = "0.4"
env_logger = "0.11"
strum = { version = "0.26", features = ["derive"] }
