[package]
name = "gherrit"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[profile.release]
debug = true

[dependencies]
gix = { version = "0.75.0", features = ["blocking-network-client"] }
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.21", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
owo-colors = "4.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
predicates = "3.1"
fastrand = "2.0"
testutil = { path = "testutil" }
libc = "0.2"

[[bin]]
name = "mock_bin"
path = "tests/support/mock_bin.rs"
test = false

[workspace]
members = ["testutil"]
