[package]
name = "testutil"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.1"
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
predicates = "3.1"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
gix = { version = "0.75.0", default-features = false }
escargot = "0.5.15"

[[bin]]
name = "mock_bin"
path = "src/mock_bin.rs"
