[package]
name = "testutil"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.1"
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
predicates = "3.1"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }

ureq = { version = "2.9", default-features = false, features = ["json", "native-tls"] }
apollo-compiler = "1.0"

[[bin]]
name = "mock_bin"
path = "src/mock_bin.rs"
